# StealthCat

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_v2ray_support.sql  003_add_rule_name.sql
backend/src/: api.rs  config.rs  database.rs  main.rs  models.rs  proxy.rs  subscription.rs  websocket.rs
docs/: current-progress.md  development-plan.md
frontend/: package.json  tailwind.config.js
frontend/src/: App.js
frontend/src/components/: AdvancedStats.js  NotificationSystem.js  Sidebar.js  StatusCard.js  TrafficChart.js
frontend/src/contexts/: LanguageContext.js  ThemeContext.js
frontend/src/pages/: Configuration.js  Dashboard.js  Logs.js  Rules.js  Servers.js  Settings.js
frontend/src/styles/: globals.css
